# onto_merger

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DEVELOPMENT_PLAN.md  LICENSE  MANIFEST.in  README.md  dev_doc_gen.sh  readthedocs.yaml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
data/: DATA_NOTES.md  data_prepper.py
data/example_report/: index.html
docs/: Makefile  requirements_1.txt
docs/source/: conf.py  index.rst
onto_merger/: __init__.py  debug.py  main.py  version.py
onto_merger/alignment/: __init__.py  alignment_manager.py  hierarchy_utils.py  mapping_utils.py  merge_utils.py  networkit_utils.py  networkx_utils.py
onto_merger/alignment_config/: __init__.py  json_schema.py  validator.py
onto_merger/analyser/: __init__.py  analyser.py  analysis_util.py  analysis_utils.py  constants.py  merged_ontology_analyser.py  pandas_profiler.py  plotly_utils.py  report_analyser.py  report_analyser_new.py  report_analyser_utils.py  report_analyser_utils_new.py
onto_merger/data/: __init__.py  constants.py  data_manager.py  dataclasses.py
onto_merger/data_testing/: __init__.py  ge_expectation_helper.py  ge_runner.py  ge_utils.py
onto_merger/logger/: log.py
onto_merger/pipeline/: __init__.py  pipeline.py
onto_merger/report/: __init__.py  constants.py  dummy_data.py  onto_merger_report.html  plot_generator.py  plotly_gant_processing.html  report_generator.py  section_data_loader.py
tests/: fixtures.py
tests/integration/: analysis_table_files.csv  image_and_figure_files.csv  report_images.csv  test_pipeline.py  (+1 more)
(+215 files in other folders)
