##########################
# Setup.py Configuration #
##########################
[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

##########################
# Flake8 Configuration   #
##########################
[flake8]
ignore =
    E203,
    W503,
    BLK100,
    B023
exclude =
    .tox,
    .git,
    .github,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    ./data,
    ./tests
max-line-length = 120
